minor spacing fix

--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -6,7 +6,7 @@
 .blog .section-title {
   text-align: left;
   max-width: 700px;
-  margin: 0 auto 1rem;
+  margin: 0 auto 1.5rem;
   font-size: 1.5rem;
 }
 
